# allwhat

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: batch.rs  group.rs  lib.rs  monadic.rs  split.rs
core/src/try_mut/: impls.rs  mod.rs  traits.rs  transaction.rs
core/tests/: test_batch_result.rs  test_error_group.rs  test_macros.rs  test_try_mut.rs
core/tests/bulk_try/: expr_call.rs  expr_field.rs  expr_struct.rs  mod.rs
core/tests/common/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs  map_struct.rs
macros/src/bulk_try/: ast.rs  mod.rs
macros/src/logger/: mod.rs
macros/src/try_assign/: ast.rs  mod.rs
src/: annotation.rs  batch.rs  group.rs  lib.rs  macros.rs  monadic.rs  split.rs
src/try_mut/: impls.rs  mod.rs  traits.rs  transaction.rs
tests/: test_batch_result.rs  test_error_group.rs  test_try_mut.rs
tests/common/: mod.rs
