[package]
name = "allwhat"
version = "0.1.0" # remember to update html_root_url
authors = ["Dave Fogelson <theprocessfoundry.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Extended Result functionality"
repository = "https://github.com/the_process_foundry/allwhat"
documentation = "https://github.com/the_process_foundry/allwhat"
readme = "README.md"
categories = ["rust-patterns"]

[features]
default = ["groups", "batch", "iteration"]
all = ["groups", "batch", "iteration", "try_mut"]
batch = ["groups"]
groups = []
iteration = []
try_mut = []

[dependencies]
anyhow = { version = "1.0.43", optional = false }
# anyhow = { path = "../anyhow", optional = false }

# For building some macros
paste = "1.0.5"

[dev-dependencies]
thiserror = "1.0.29"
trybuild = { version = "1.0.45", features = ["diff"] }


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
