[package]
name = "allwhat"
version = "0.1.0" # remember to update html_root_url
authors = ["Dave Fogelson <theprocessfoundry.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Extended Result functionality"
repository = "https://github.com/the_process_foundry/allwhat"
documentation = "https://github.com/the_process_foundry/allwhat"
readme = "README.md"
categories = ["rust-patterns"]

[features]
default = ["groups", "batch", "iteration", "proc_macros"]
all = ["groups", "batch", "iteration", "proc_macros"]
batch = ["groups"]
groups = []
iteration = []
proc_macros = []

[dependencies]
# Basic Logging
log = "0.4.14"
env_logger = "0.9.0"

anyhow = { version = "1.0.43", optional = false }
# anyhow = { path = "../anyhow", optional = false }

# For building basic macros
paste = "1.0.5"

# proc_macros that implement allwhat
allwhat-macros = { path = "../macros" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
