[package]
name = "allwhat-macros"
version = "0.1.0" # remember to update html_root_url
authors = ["Dave Fogelson <theprocessfoundry.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for extended result functionality"
repository = "https://github.com/the_process_foundry/allwhat"
documentation = "https://github.com/the_process_foundry/allwhat"
readme = "README.md"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
# Basic Logging
log = "0.4.14"
env_logger = "0.9.0"

# Functional macro tools
proc-macro2 = "1.0.29"
syn = {version = "1.0", features=["full"]}
quote = "1.0"

# Make a module level variable if needed
lazy_static = "1.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
